tests/dataset/tpc-ds/compiler/java/q19.error
javac error: exit status 1
/tmp/TestJavaCompiler_TPCDSQueriesq192996664046/001/Q19.java:363: error: cannot find symbol
                            if (!(ss.ss_store_sk == s.s_store_sk && !Objects.equals(substr(ca.ca_zip, 0, 5), substr(s.s_zip, 0, 5)))) continue;
                                                                                    ^
  symbol: method substr(String,int,int)
/tmp/TestJavaCompiler_TPCDSQueriesq192996664046/001/Q19.java:363: error: cannot find symbol
                            if (!(ss.ss_store_sk == s.s_store_sk && !Objects.equals(substr(ca.ca_zip, 0, 5), substr(s.s_zip, 0, 5)))) continue;
                                                                                                             ^
  symbol: method substr(String,int,int)
/tmp/TestJavaCompiler_TPCDSQueriesq192996664046/001/Q19.java:382: error: cannot find symbol
        res5.add(x.ss_ext_sales_price);
                  ^
  symbol:   variable ss_ext_sales_price
  location: variable x of type DI
/tmp/TestJavaCompiler_TPCDSQueriesq192996664046/001/Q19.java:390: error: incompatible types: possible lossy conversion from double to int
    if (!(Objects.equals(result, Arrays.asList(new IBrandIBrandIdIManufactIdIManufactExtPrice("B1", 1, 1, "M1", 100.000000))))) throw new AssertionError("expect failed");
                                                                                                                ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
4 errors
